Fix input field cutoff issue in some layouts

--- a/src/components/ids-input/ids-input.scss
+++ b/src/components/ids-input/ids-input.scss
@@ -171,7 +171,7 @@ $border-input-field-height-lg: $input-field-height-lg - 2;
 
 :host {
   display: block;
-  max-width: 100%;
+  max-width: calc($input-size-default - 2px);
 
   .ids-input {
     display: inline-block;
